Bugfix for 95% popularity cutoff when listing champions in lane. Color match counts to indicate how common it is.

--- a/LeagueOfStats.CmdGen/Css/GlobalStats.css
+++ b/LeagueOfStats.CmdGen/Css/GlobalStats.css
@@ -83,3 +83,15 @@ tbody tr:nth-child(odd) {
 tbody tr:hover {
     background-color: #333;
 }
+
+.pop-1 {
+    color: #46d00e;
+}
+
+.pop-2 {
+    color: #cccc03;
+}
+
+.pop-3 {
+    color: #e64040;
+}
